// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BestModal /> should disable lock 1`] = `
<Portal>
  <div
    aria-modal="true"
    role="dialog"
  >
    <FocusLock
      autoFocus={false}
      disabled={false}
      noFocusGuards={false}
      persistentFocus={false}
      returnFocus={false}
    >
      hello world
    </FocusLock>
  </div>
</Portal>
`;

exports[`<BestModal /> should pass through all extra props 1`] = `
<Portal>
  <div
    aria-describedby="my-p"
    aria-labelledby="my-h1"
    aria-modal="true"
    className="my-modal"
    role="dialog"
  >
    <FocusLock
      autoFocus={true}
      disabled={false}
      noFocusGuards={false}
      persistentFocus={false}
      returnFocus={false}
    >
      hi
    </FocusLock>
  </div>
</Portal>
`;
